@@ -3,11 +3,8 @@
 . /etc/profile
 oe_setup_addon service.couchpotato
 
-if [ -z "$cp_nice" ]; then
-  cp_nice="0"
-fi
-
+PYTHONUSERBASE="$ADDON_DIR" \
 nice -n "$cp_nice" \
-python $ADDON_DIR/CouchPotato/CouchPotato.py \
-       --config_file $ADDON_HOME/settings.conf \
-       --data_dir $ADDON_HOME
+python "$ADDON_DIR/couchpotato/CouchPotato.py" \
+       --config_file "$ADDON_HOME/settings.conf" \
+       --data_dir "$ADDON_HOME"
