@@ -1,0 +1,3 @@
+<settings>
+   <setting id="cp_nice" value="10" />
+</settings>
